--- a/public/pages/geoJSON.html
+++ b/public/pages/geoJSON.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="/bower_components/d3/d3.min.js"></script>
+	<script type="text/javascript" src="/bower_components/geojson-map/data/us_counties.json"></script>
 	<link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <body>
