--- a/public/pages/jQuery1.html
+++ b/public/pages/jQuery1.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="/bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>
 	<script type="text/javascript" scr="/bower_components/jScrollPane/script/jquery.jscrollpane.min.js"></script>
 	<link rel='stylesheet' href="/bower_components/jScrollPane/style/jquery.jscrollpane.css">
+	<!-- jScrollPane allows you to make custom scroll bars -->
 	<style>
 		.zebra {
 			background-color: #dddddd;
@@ -189,9 +190,6 @@
   			e.preventDefault();				// like +=50px
   		});
 
-  		$('#fine_print').jScrollPane({
-  			verticalGutter: 20
-    	}); 					//Installing a custom scroll bar
 
   	});									
 </script>
